# MVGLTools

./: CMakeLists.txt
DSCSTools/: CMakeLists.txt  Compressors.cpp  EXPA.cpp  EXPANew.cpp  MBD1New.cpp  MDB1.cpp  MDB1New.cpp
DSCSTools/include/: Compressors.h  EXPA.h  EXPAnew.h  Helpers.h  MDB1.h  MDB1new.h
DSCSTools/structures/: colosseum_item.json
DSCSToolsCLI/: CMakeLists.txt  DSCSTools.cpp  DSTSTools.cpp
MVGLToolsCLI/: MVGLTools.cpp
